fix: disqus comment section too wide

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -267,7 +267,8 @@ article p {
 .listing,
 .pagination,
 article .highlight>pre,
-article #content>* {
+article #content>*,
+article footer>* {
     width: calc(100% - 64px);
     max-width: 700px;
     margin-right: auto;
